--- a/views/signup.html
+++ b/views/signup.html
@@ -4,21 +4,17 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="css/styles.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/js-sha256/0.9.0/sha256.min.js"></script>
-    <script src="js/login.js"></script>
-    <title>JongCo's Life Quest - Login</title>
+    <script src="js/signup.js"></script>
+    <title>JongCo's Life Quest - Sign Up</title>
 </head>
 <body>
     <div class="container">
-        <div class="login-label">JongCo's Life Quest</div>
+        <div class="login-label">Sign Up</div>
         <div class="login-form">
             <input id="username-input" type="text" name="username" placeholder="Username">
             <input id="password-input" type="password" name="password" placeholder="Password">
-            <input id="login-btn" type="submit" value="Login">
+            <input id="signup-btn" type="submit" value="Sign Up">
         </div>
-    </div>
-    
-    <div class="links">
-        <a href="./signup">회원가입</a>
     </div>
 </body>
 </html>
