--- a/views/app.html
+++ b/views/app.html
@@ -2,11 +2,30 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="css/app.css">
+    <script src="js/app.js"></script>
     <title>Document</title>
 </head>
 <body>
-    드디어여기까지!?
+    <div id="container">
+        <div class="todo-container">
+          <h3 class="todo-title">Daily Works</h3>
+          <div id="todo-list-container1" class="todo-list">
+            <div class="list-wrapper">
+              <input class="checkbox" type="checkbox" />
+              <label class="list-label">this is test label</label>
+            </div>
+            <div class="list-wrapper">
+              <input class="checkbox" type="checkbox" />
+              <label class="list-label">another test list</label>
+            </div>
+          </div>
+          <div class="todo-bottom">
+            <input class="add-list-text" type="text">
+            <button class="add-list-btn">Add TODO</button>
+          </div>
+        </div>
+      </div>
+      <input id="test-btn" class="button" type="button" value="test">
 </body>
 </html>
