--- a/views/app.html
+++ b/views/app.html
@@ -9,8 +9,14 @@
 <body>
     <div id="container">
         <div class="todo-container">
-          <h3 class="todo-title">Daily Works</h3>
-          <div id="todo-list-container1" class="todo-list">
+            <div class="todo-bottom">
+                <input id="add-title" class="add-title" />
+                <button id="add-title-btn" class="add-title-btn">ADD TODO</button>
+            </div>
+        </div>
+        <div class="todo-container">
+          <h3 class="todo-title">Todo List</h3>
+          <div id="todo-list-container" class="todo-list">
             <div class="list-wrapper">
               <input class="checkbox" type="checkbox" />
               <label class="list-label">this is test label</label>
@@ -19,10 +25,6 @@
               <input class="checkbox" type="checkbox" />
               <label class="list-label">another test list</label>
             </div>
-          </div>
-          <div class="todo-bottom">
-            <input class="add-list-text" type="text">
-            <button class="add-list-btn">Add TODO</button>
           </div>
         </div>
       </div>
