--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -50,11 +50,12 @@ input {
     background-color: #EEFFEE;
 }
 
-/* .links {
-
-} */
+.links {
+    text-align: center;
+    margin-bottom: 12px;
+}
 
 .links a {
-    font-size: 12px;
-    color: #C388FF;
+    font-size: 24px;
+    color: #FFFFFF;
 }
